070426 rk -           Added gsd-file si0380a7.gsd, for Siemens Diagnostic Repeater.
070430 rk -           Changed status handling of Profibus slaves so that correct
                      view of the world is given.
070518 rk -           Added io-method IoAgentSwap to keep driver initialized during warm restart.
070601 cs -           Bugfix, opening Profibus Configurator with empty gsdfile attribute caused segfault.
071008 cs -           ChanIi with name starting with Diag_ fetches value from diagnostic area.
071116 cs -           Bugfix in Profibus configurator, ExtUserPrmData for slave, default values where not set.
071116 cs -           Bugfix in Profibus configurator, additional ExtUserPrmDataConst was not handled correctly.
071205 rk -           ChanDi and ChanDo inverts value if InvertOn set on channel.
071211 rk mmi         Added supgraph mcomp_pb_dp_slave.
080115 cs -           Reading of Di, Ai and Ii can be disabled by setting ConversionOn in channel object to 0.
080229 rk -           I/O-handling routines generalized and some routines moved to rt_io_bus.c
100702 cs -           Common IO module objects for different busses.
100708 rk -           Added functionality for PROFINET IO using Softing Profinet Stack
101202 rk -           Finalized PROFINET IO functionality. Added several classes
                      for handling different types of Profinet IO.
110223 cs -           Profinet and Profibus configurators, default module class setting added, and Apply button added.
110223 cs profinet    Profinet configurator, order number added to text in module type list.
110328 cs profinet    Profinet configurator, choice wether to clear or keep data when gsdml file is changed.
110429 cs profibus    Profibus gsd Bit and BitArea syntax fix for space between Bit and (
110531 cs profinet    Recall buffer added to profinet configurator.
110531 cs profinet    Script functions GetIoDeviceData and SetIoDeviceData to modify profinet configuration added.